2000-08-16  Andreas Jaeger  <aj@suse.de>

	* package-compile.el (package-directory-map): Add semantic.
	(package-name-to-directory): Handle jde special.

2000-08-16  Steve Youngs  <youngs_s@ozlinx.com.au>

	* CVSROOT/modules: added module for eicq

	* comm/Makefile (PACKAGES): added eicq

	* package-compile.el (package-directory-map): added eicq

2000-06-23  Adrian Aichner  <aichner@ecf.teradyne.com>

	* XEmacs.rules: Temporarily work around shortcomings of XEmacs
	native NT with command-line-argument- and file-path syntax
	parsing.
	(XEMACS_NATIVE_NT): Determine whether packages are
	being built by Native-NT XEmacs.
	(PACKAGE_COMPILE): Conditionalize for XEmacs native NT build.
	(AUTOLOAD_PACKAGE_NAME): Ditto.
	(PKG_TAR_GZ): Ditto.
	(PACKAGE_INFO): Ditto.
	(%.elc): Use generalized PACKAGE_COMPILE.
	($(AUTOLOAD_PATH)/auto-autoloads.el): Use generalized
	AUTOLOAD_PACKAGE_NAME.
	(package-info): Use generalized PKG_TAR_GZ and PACKAGE_INFO.

2000-06-22  Andreas Jaeger  <aj@suse.de>

	* XEmacs.rules: Uncomment ELCS test.
	Patch by Didier Verna <didier@xemacs.org>.

2000-06-04  Andreas Jaeger  <aj@suse.de>

	* Makefile: Move includes to the front and add new target all as
	first target.

	* Local.rules.template (XEMACS): Use xemacs instead of a system
	specific path.

	* Local.rules.mk (___): Really create Local.rules if it doesn't exist.

2000-05-23  Karl M. Hegbloom  <karlheg@debian.org>

	* Local.rules.template, Local.rules.mk: New files.

	* Makefile, XEmacs.rules: Include Local.rules.mk, define
	XEMACS_PACKAGES_BASE, make sure all RCOPY commands are run with
	absolute / rooted paths so that --recursive --symlink works.  Make
	tar building optional. Did away with BUILD_MULE.

2000-01-12  Andreas Jaeger  <aj@suse.de>

	* package-compile.el (package-directory-map): Added idlwave.

1999-12-14  Andreas Jaeger  <aj@suse.de>

	* Makefile (SUBDIRS): Build for mule unless BUILD_WITHOUT_MULE is
	set.

1999-07-23  SL Baur  <steve@xemacs.org>
