@@ -76,7 +76,6 @@
     ("lookup" . "mule")
     ("mule-base" . "mule")
     ("skk" . "mule")
-    ("ucs-conv" . "mule")
     ;; prog/*
     ("ada" . "prog")
     ("c-support" . "prog")
@@ -101,12 +100,10 @@
     ("footnote" . "comm")
     ("gnats" . "comm")
     ("gnus" . "comm")
-    ;; ("irchat" . "comm")
     ("mailcrypt" . "comm")
     ("mew" . "comm")
     ("mh-e" . "comm")
     ("net-utils" . "comm")
-    ("pgnus" . "comm")
     ("rmail" . "comm")
     ("supercite" . "comm")
     ("tm" . "comm")
@@ -160,16 +157,15 @@
 				"../.."))))
     (cond ((equal package "gnus")
 	   (expand-file-name "gnus/lisp" (file-name-as-directory dir)))
-	  ((equal package "pgnus")
-	   (expand-file-name "gnus/lisp" (file-name-as-directory dir)))
-	  ((or (equal package "w3") (equal package "bbdb") (equal package "jde"))
+	  ((or (equal package "w3") 
+	       (equal package "bbdb") 
+	       (equal package "jde")
+	       (equal package "lookup"))
 	   (expand-file-name "lisp" (file-name-as-directory dir)))
 	  ((equal package "mew")
 	   (expand-file-name "mew" (file-name-as-directory dir)))
 	  ((equal package "zenirc")
 	   (expand-file-name "src" (file-name-as-directory dir)))
-	  ((equal package "lookup")
-	   (expand-file-name "lisp" (file-name-as-directory dir)))
 	  (t dir))))
 
 (defvar depends nil)
